[#1042]support spring cloud 2022.0.x - partial: upgrade maven-surefire-plugin