@@ -66,7 +66,7 @@
             <plugin>
               <groupId>org.jacoco</groupId>
               <artifactId>jacoco-maven-plugin</artifactId>
-              <version>0.8.2</version>
+              <version>0.8.10</version>
               <configuration>
                 <excludes>
                   <exclude>*$Impl_*</exclude>
@@ -148,12 +148,39 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.gmaven</groupId>
-          <artifactId>gmaven-plugin</artifactId>
-          <version>1.5</version>
+          <version>3.0.0-M9</version>
+          <configuration>
+            <argLine>
+              -Djdk.attach.allowAttachSelf
+              --add-opens java.base/java.io=ALL-UNNAMED
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+              --add-opens java.base/java.net=ALL-UNNAMED
+              --add-opens java.base/java.nio=ALL-UNNAMED
+              --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+              --add-opens java.base/java.nio.file=ALL-UNNAMED
+              --add-opens java.base/java.util=ALL-UNNAMED
+              --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+              --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+              --add-opens java.base/java.util.jar=ALL-UNNAMED
+              --add-opens java.base/java.util.stream=ALL-UNNAMED
+              --add-opens java.base/java.time=ALL-UNNAMED
+              --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+              --add-opens java.base/sun.net.dns=ALL-UNNAMED
+              --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+              --add-opens java.base/sun.security.jca=ALL-UNNAMED
+              --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+              --add-reads java.base=java.desktop
+            </argLine>
+            <skip>${maven.test.skip}</skip>
+            <testFailureIgnore>${maven.test.failure.ignore}</testFailureIgnore>
+            <excludes>
+              <exclude>${excludesFile}</exclude>
+            </excludes>
+            <forkCount>1</forkCount>
+            <reuseForks>true</reuseForks>
+            <runOrder>alphabetical</runOrder>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>com.github.odavid.maven.plugins</groupId>
@@ -185,6 +212,7 @@
       </plugin>
     </plugins>
   </build>
+
   <reporting>
     <plugins>
       <plugin>
@@ -193,10 +221,7 @@
         <version>3.16.0</version>
         <configuration>
           <excludes>
-            <!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
-            <!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
             <exclude>**/discovery*/price*/**</exclude>
-            <!--            <exclude>**/*router-client/**</exclude>-->
           </excludes>
           <excludeRoots>
             <excludeRoot>**/integration*/**</excludeRoot>
